Fix spacing helpers

--- a/sass/_spacing.sass
+++ b/sass/_spacing.sass
@@ -22,28 +22,28 @@
   margin-bottom: 0
 
 @each $name, $size in $spacing-map
-  .margin-#{name}
-    margin: #{size}
+  .margin-#{$name}
+    margin: #{$size}
 
-  .margin-#{name}-top
-    margin-top: #{size}
+  .margin-#{$name}-top
+    margin-top: #{$size}
 
-  .margin-#{name}-right
-    margin-right: #{size}
+  .margin-#{$name}-right
+    margin-right: #{$size}
 
-  .margin-#{name}-bottom
-    margin-bottom: #{size}
+  .margin-#{$name}-bottom
+    margin-bottom: #{$size}
 
-  .margin-#{name}-left
-    margin-left: #{size}
+  .margin-#{$name}-left
+    margin-left: #{$size}
 
-  .margin-#{name}-sides
-    margin-right: #{size}
-    margin-left: #{size}
+  .margin-#{$name}-sides
+    margin-right: #{$size}
+    margin-left: #{$size}
 
-  .margin-#{name}-ends
-    margin-top: #{size}
-    margin-bottom: #{size}
+  .margin-#{$name}-ends
+    margin-top: #{$size}
+    margin-bottom: #{$size}
 
 .no-padding
   padding: 0
@@ -69,25 +69,25 @@
   padding-bottom: 0
 
 @each $name, $size in $spacing-map
-  .padding-#{name}
-    padding: #{size}
+  .padding-#{$name}
+    padding: #{$size}
 
-  .padding-#{name}-top
-    padding-top: #{size}
+  .padding-#{$name}-top
+    padding-top: #{$size}
 
-  .padding-#{name}-right
-    padding-right: #{size}
+  .padding-#{$name}-right
+    padding-right: #{$size}
 
-  .padding-#{name}-bottom
-    padding-bottom: #{size}
+  .padding-#{$name}-bottom
+    padding-bottom: #{$size}
 
-  .padding-#{name}-left
-    padding-left: #{size}
+  .padding-#{$name}-left
+    padding-left: #{$size}
 
-  .padding-#{name}-sides
-    padding-right: #{size}
-    padding-left: #{size}
+  .padding-#{$name}-sides
+    padding-right: #{$size}
+    padding-left: #{$size}
 
-  .padding-#{name}-ends
-    padding-top: #{size}
-    padding-bottom: #{size}
+  .padding-#{$name}-ends
+    padding-top: #{$size}
+    padding-bottom: #{$size}
